@@ -1,9 +1,15 @@
+2011-02-20  Kevin B, Kenny  <kennykb@acm.org>
+
+	* tests/tdbcodbc.test (tdbc::odbc-30.[45]):
+			Added tests for [allrows] and [foreach] on multiple
+			result sets.
+
 2011-01-26  Kevin B. Kenny  <kennykb@acm.org>
 
 	* doc/tdbc_odbc.n:
 	Added empty comment at the start of each manpage because 'man'
 	interprets comments there as directives.
-	
+
 2011-01-22  Kevin B. Kenny  <kennykb@acm.org>
 
 	* odbcStubDefs.txt: Added SQLMoreResults, needed for multiple result
@@ -18,7 +24,7 @@
 	* tdbcodbc.test: Added tests that the 'moreresults' method works
 	                 correctly in the event of 0, 1, and more than one
 	                 result set.
-	
+
 2010-09-03  Kevin B. Kenny  <kennykb@acm.org>
 
 	* tdbcodbc.test: Made tests more portable.
